--- a/insta/templates/insta/feed.html
+++ b/insta/templates/insta/feed.html
@@ -2,82 +2,27 @@
 {% block title %}My feed{% endblock %}
 {% block headpart %} 
 <style>
-    .add_form{
-       display: none;
-    }
 
-
-    body {
-        /*background-color: #B3E5FC;*/
-        border-radius: 10px
-    }
-    
-    .card {
-        width: 400px;
-        border: none;
-        border-radius: 10px;
-        background-color: #fff
-    }
-    
-    .stats {
-        background: #f2f5f8 !important;
-        color: #000 !important
-    }
-    
-    .articles {
-        font-size: 10px;
-        color: #a1aab9
-    }
-    
-    .number1 {
-        font-weight: 500
-    }
-    
-    .followers {
-        font-size: 10px;
-        color: #a1aab9
-    }
-    
-    .number2 {
-        font-weight: 500
-    }
-    
-    .rating {
-        font-size: 10px;
-        color: #a1aab9
-    }
-    
-    .number3 {
-        font-weight: 500
-    }
-    .d-flex{display: flex !important;}
-    .flex-column {
-        flex-direction: column !important;
-    }
-    .image{
-        padding: 2px;
-    }
 </style>
 <script>
-    function showAddForm(){
-        //$("a").toggleClass("add_form");
-        $('.add_form').show();
-    }
-    function closeAddForm(){
-        $('.add_form').hide();
-    }
 
     
+        
+          
     function follow(follow_id){
-        alert("hii");
-        alert(follow_id);
         $.ajax({
             type: 'POST',
-            url: "{% url 'follow' %}",
+            url: '/follow/',
             data: {'follow_id': follow_id ,
             'csrfmiddlewaretoken': '{{ csrf_token }}',
         },
             success: function (response) {
+
+                $('.follow-alert').removeClass('fade');
+                setTimeout(function() {
+                    $('.follow-alert').addClass('fade');
+                    location.reload();  
+                },1200);
                 
             },
             error: function (response) {
@@ -86,6 +31,52 @@
             },
     });
 }
+function likeme(post_id,unlike){
+    $.ajax({
+        type: 'POST',
+        url: "{% url 'likeme' %}",
+        data: {'post_id': post_id ,
+                'unlike' : unlike,
+        'csrfmiddlewaretoken': '{{ csrf_token }}',
+    },
+        success: function (response) {
+            $("#heart").addClass("liked");
+        },
+        error: function (response) {
+            // alert the error if any error occured
+            alert(response["responseJSON"]["error"]);
+        },
+});
+}
+    
+    $(document).ready(function(){
+        $("#comment_form").submit(function(){
+            $.ajax({
+                type: 'POST',
+                url: '/comment/',
+                data:   $("#comment_form").serialize(),
+                success: function (response) {
+    
+                    alert("sucess");
+                    
+                },
+                error: function (response) {
+                    // alert the error if any error occured
+                    alert(response["responseJSON"]["error"]);
+                },
+        });
+          });
+
+        $("#heart").click(function(){
+          if($("#heart").hasClass("liked")){
+            $("#heart").html('<i class="fa fa-heart-o" aria-hidden="true"></i>');
+            $("#heart").removeClass("liked");
+          }else{
+            $("#heart").html('<i class="fa fa-heart" aria-hidden="true"></i>');
+            $("#heart").addClass("liked");
+          }
+        });
+      });
 
 </script>
 
@@ -122,24 +113,68 @@
 <div class="col-md-6">
 <div class="main-content">
     
-    
+    {% if posts %}
+    {% for id, postval in posts.items %}
+    <div class="card" style="width: 58rem;">
+        <img src='/media/{{postval.image}}'  width="100%" />
+        <div class="card-body">
+            <p class="card-text">{{postval.caption}} </p>
+            {% if postval.liked %}
+                <span id = "heart" class="liked">
+                    <i class="fa fa-heart" aria-hidden="true" onclick="likeme({{postval.id}},'unlike')" ></i>
+                </span>
+            {% else %}
+                <span id = heart>
+                    <i class="fa fa-heart-o" aria-hidden="true" onclick="likeme({{postval.id}},'')" ></i>
+                </span>
+                
+            {% endif %}
+            <a href="#" onclick="openCBox()">comment</a>
+            <div class="cbox">
+                <form method="POST" id="comment_form">
+                    {% csrf_token %}
+                    <input type="hidden" value="{{postval.id}}" name="post_id" />
+                    <textarea rows="3" cols="70" name="comment_val"></textarea>
+                    <button value="Submit" style="width: 15%;" name="comment_submit" >
+                </form>
+            </div>  
+               
+
+<!-- Used CDN for Font Awesome and Jquery. -->
+
+
+
+        </div>
+    </div>
+
+    {% endfor %}    
+    {% endif %}    
+
     {%if uploadedValues %}
     <img src='/media/posts/{{uploadedValues.imagepath}}'  width="100%" />
-    Uploaded {{uploadedValues.caption}}
+    {{uploadedValues.caption}}
     {% endif %}
+
 </div>
 </div>
 
 
 <div class="col-md-4">
+    {%if near_by_users %}
 <h2 style="text-align:center">People You may Know</h2>
+<div class="alert alert-info follow-alert fade" role="alert">
+    New connection added
+  </div>
+{% else %}
+<h2 style="text-align:center">No nearby profiles found</h2>
+{% endif %}
 {% for key,near_by_user in near_by_users.items %}
-    <div class="container mt-5 d-flex justify-content-center" style="margin:5px;padding:5px;">
+    <div class="mt-5 d-flex justify-content-center" style="margin:5px;padding:5px;">
         <div class="card p-3">
             <div class="d-flex align-items-center">
                 <div class="image"> <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80" class="rounded" width="155"> </div>
                 <div class="ml-3 w-100">
-                    <h4 class="mb-0 mt-0">{{ near_by_user.profile}}</h4> <span>Senior Journalist</span>
+                    <h4 class="mb-0 mt-0">{{ near_by_user.profile}}</h4> <span>{{near_by_user.location}}</span>
                     <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
                         <!--<div class="d-flex flex-column"> <span class="articles">Articles</span> <span class="number1">38</span> </div>
                         <div class="d-flex flex-column"> <span class="followers">Followers</span> <span class="number2">980</span> </div>
@@ -151,6 +186,7 @@
             </div>
         </div>
     </div>
+    
     {% endfor %}
     </div>
 
