--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@
   
   body {
     background-color: #eee;
+    max-width: 1325px;
   }
   
   #wrapper {
@@ -61,7 +62,7 @@
   }
   
   .btn {
-    width: 100%;
+    /*width: 100%;*/
     background-color: #3897f0;
     border: 1px solid #3897f0;
     padding: 5px 12px;
@@ -173,3 +174,71 @@
   background-color: whitesmoke;
   padding: 5px;
   }
+
+  .add_form{
+    display: none;
+ }
+
+
+ body {
+     /*background-color: #B3E5FC;*/
+     border-radius: 10px
+ }
+ 
+ .card {
+     width: 400px;
+     border: none;
+     border-radius: 10px;
+     background-color: #fff
+ }
+ 
+ .stats {
+     background: #f2f5f8 !important;
+     color: #000 !important
+ }
+ 
+ .articles {
+     font-size: 10px;
+     color: #a1aab9
+ }
+ 
+ .number1 {
+     font-weight: 500
+ }
+ 
+ .followers {
+     font-size: 10px;
+     color: #a1aab9
+ }
+ 
+ .number2 {
+     font-weight: 500
+ }
+ 
+ .rating {
+     font-size: 10px;
+     color: #a1aab9
+ }
+ 
+ .number3 {
+     font-weight: 500
+ }
+ .d-flex{display: flex !important;}
+ .flex-column {
+     flex-direction: column !important;
+ }
+ .image{
+     padding: 2px;
+ }
+ .fa-heart-o {
+     color: red;
+     cursor: pointer;
+   }
+   
+   .fa-heart {
+     color: red;
+     cursor: pointer;
+   }
+   .cbox{
+     display: none;
+   }
