--- a/insta/templates/insta/base.html
+++ b/insta/templates/insta/base.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link href="/static/css/style.css?ver=3" rel="stylesheet">
-        <script src="/static/js/scripts.js?ver=1"></script>
-        <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Overpass+Mono" rel="stylesheet">
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+        <script src="/static/js/jquery_3.5.1_jquery.min.js"></script>
+        <script src="/static/js/bootstrap_3.4.1.min.js"></script>
+        <link href="/static/css/style.css?ver=5" rel="stylesheet">
+        <script src="/static/js/scripts.js?ver=3"></script>
+        <link href="/static/css/fonts.googleapis.css" rel="stylesheet">
+        <!-- <link href="/static/css/font-awesome.min.css" rel="stylesheet"> -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +20,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="header">
-                            <img src="/static/images/instagram.png" />
+                            <a href="/"><img src="/static/images/instagram.jpg" /></a>
                         </div>
                     </div>
                     {% if request.user.is_authenticated %} <div style="text-align:right"> Hello, {{request.user.username}}{{ request.user.id}}<a href='accounts/logout' >Logout</a> </div>{% endif %}
