--- a/insta/templates/insta/base.html
+++ b/insta/templates/insta/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="/static/js/jquery_3.5.1_jquery.min.js"></script>
         <script src="/static/js/bootstrap_3.4.1.min.js"></script>
         <link href="/static/css/style.css?ver=5" rel="stylesheet">
