--- a/insta/templates/registration/base.html
+++ b/insta/templates/registration/base.html
@@ -11,7 +11,7 @@
         <div id="wrapper">
             <div class="main-content">
                 <div class="header">
-                    <img src="/static/images/instagram.png" />
+                    <img src="/static/images/instagram.jpg" />
                 </div>
                 {% block content %} {% endblock %}
             </div>
